--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules/
+api.js
+.env
 .expo/
 npm-debug.*
 *.jks
@@ -8,6 +10,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+
 
 # macOS
 .DS_Store
